# kleya

./: .gitignore  .jjignore  .mutants.toml  CONTRIBUTING.md  Cargo.toml  ONBOARDING.md  README.md  clippy.toml  deny.toml  lefthook.yml
.cargo/: config.toml
.github/workflows/: ci.yml  release-skill.yml
crates/kleya-aws/: Cargo.toml
crates/kleya-aws/src/: client.rs  ec2.rs  error.rs  lib.rs  mapping.rs
crates/kleya-aws/tests/floci/: instance_lifecycle.rs  mod.rs  template_lifecycle.rs
crates/kleya-bootstrap-assets/: Cargo.toml
crates/kleya-bootstrap-assets/assets/: ghostty.terminfo  setup_devbox.sh.j2
crates/kleya-bootstrap-assets/src/: lib.rs
crates/kleya-cli/: Cargo.toml
crates/kleya-cli/src/: clap_args.rs  config_loader.rs  dispatch.rs  exit_code.rs  key_store_fs.rs  lib.rs  logging.rs  main.rs  ssh_probe.rs
crates/kleya-cli/tests/: cli_smoke.rs  config_roundtrip.rs  key_store_fs.rs
crates/kleya-core/: Cargo.toml
crates/kleya-core/src/: config.rs  error.rs  json_envelope.rs  lib.rs  limits.rs  parsed_config.rs  util.rs
crates/kleya-core/src/bootstrap/: encode.rs  mod.rs  render.rs
crates/kleya-core/src/commands/: connect.rs  launch.rs  list.rs  mod.rs  template.rs  terminate.rs
crates/kleya-core/src/model/: instance.rs  key.rs  launch.rs  market.rs  mod.rs  region.rs  tag.rs  template.rs
crates/kleya-core/src/ports/: clock.rs  cloud_compute.rs  id_gen.rs  key_store.rs  mod.rs
crates/kleya-core/src/test_support/: fake_clock.rs  fake_id_gen.rs  in_memory_compute.rs  in_memory_key_store.rs  mod.rs
crates/kleya-core/tests/: commands_with_fakes.rs  render_snapshot.rs
crates/kleya-core/tests/snapshots/: render_snapshot__setup_devbox_default.snap  render_snapshot__setup_devbox_no_ghostty.snap
docs/: README.md  e2e-aws.md
docs/specs/: 00-overview.md  01-domain-model.md  02-cli-surface.md  03-configuration.md  04-provider-port.md  05-bootstrap-rendering.md  06-launch-and-connect.md  07-error-model.md  08-testing.md  09-architecture-principles.md  10-development-guidelines.md  11-credentials-and-sso.md  canonical-types.schema.json
docs/specs/changes/: 2026-05-21-aws_thin_rest_adapter.md  2026-05-21-credential-forwarding.md  2026-05-21-credential_forwarding.md  2026-05-21-env_var_forwarding.md  2026-05-21-fly_provider.md  2026-05-21-provider_neutral_port.md  2026-05-21-ssh-port-forwarding.md  2026-05-21-ssh_port_forwarding.md
docs/specs/changes/merged/: README.md
docs/superpowers/plans/: 2026-05-16-kleya-bootstrap.md  2026-05-18-review-fixes.md  2026-05-19-credentials-login.md  2026-05-19-spec-gaps.md
docs/superpowers/specs/: 2026-05-16-kleya-bootstrap-design.md  2026-05-18-review-fixes-design.md  2026-05-19-spec-gaps-design.md  2026-05-19-sso-login-design.md
scripts/: install-skill.sh  package_skill.py
skills/using-kleya/: SKILL.md
skills/using-kleya/evals/: evals.json
