[workspace]
resolver = "2"
members = [
    "crates/kleya-core",
    "crates/kleya-aws",
    "crates/kleya-cli",
    "crates/kleya-bootstrap-assets",
]

[workspace.package]
edition = "2021"
rust-version = "1.95.0"
license = "MIT OR Apache-2.0"
authors = ["Ant Stanley <ant@senzo.io>"]
repository = "https://github.com/antstanley/kleya"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
todo = "deny"
unimplemented = "deny"
dbg_macro = "deny"

[workspace.dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
jsonc-parser = { version = "0.23", features = ["serde"] }
async-trait = "0.1"
tokio = { version = "1", features = ["macros", "rt", "time", "sync", "net", "process", "signal", "fs"] }
tokio-util = { version = "0.7", features = ["rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
clap = { version = "4", features = ["derive", "env"] }
minijinja = "2"
flate2 = "1"
base64 = "0.22"
regex = "1"
once_cell = "1"
ssh-key = { version = "0.6", features = ["ed25519", "encryption", "getrandom"] }
nix = { version = "0.29", features = ["fs", "user", "process"] }
proptest = "1"
insta = "1"

# Config for `cargo dist`.
#
# NOTE: `dist generate` regenerates `.github/workflows/release.yml` from this
# config and uses unpinned action refs (e.g. `actions/checkout@v6`). After every
# `dist generate`, re-apply the SHA pins documented in ci.yml so release.yml
# stays consistent with our supply-chain policy.
[workspace.metadata.dist]
# Bump in lockstep with the installed `dist` binary.
cargo-dist-version = "0.31.0"
ci = "github"
# We post-process the generated release.yml to pin actions to commit SHAs;
# `allow-dirty = ["ci"]` tells `dist host` not to abort when the on-disk
# workflow differs from what `dist generate` would produce. Re-pin after every
# `dist generate`.
allow-dirty = ["ci"]
# `plan` on PRs/main pushes runs the matrix in dry-run mode; tag pushes
# (v*.*.*) build real artifacts and draft a Release.
pr-run-mode = "plan"
# Unix-only — kleya uses std::os::unix::process::CommandExt::exec.
targets = [
    "x86_64-unknown-linux-gnu",
    "aarch64-unknown-linux-gnu",
    "x86_64-apple-darwin",
    "aarch64-apple-darwin",
]
# `curl -fsSL <release-url>/install.sh | sh`
installers = ["shell"]

# Profile that `dist` builds release artifacts with.
[profile.dist]
inherits = "release"
lto = "thin"
strip = "symbols"
codegen-units = 1
