[package]
name = "kleya-core"
version = "0.1.0-rc.4"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
thiserror   = { workspace = true }
serde       = { workspace = true }
regex       = { workspace = true }
once_cell   = { workspace = true }
async-trait = { workspace = true }
minijinja   = { workspace = true }
flate2      = { workspace = true }
base64      = { workspace = true }
crc32fast   = "1"
tracing     = { workspace = true }
tokio       = { workspace = true }
tokio-util  = { workspace = true }

[dependencies.kleya-bootstrap-assets]
path = "../kleya-bootstrap-assets"

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt", "test-util"] }

[features]
default = []
test-support = []

[[test]]
name = "commands_with_fakes"
required-features = ["test-support"]
